kubernetes/gameserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameserver-deployment
  template:
    metadata:
      labels:
        app: gameserver-deployment
    spec:
      containers:
        - name: gameserver-deployment
          image: joohuba/huba-game-server:latest
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
            requests:
              memory: "128Mi"
              cpu: "125m"
          ports:
            - containerPort: 8090
