kubernetes/depl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameServer-depl-service
spec:
  selector:
    app: gameServer-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
