kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
spec:
  rules:
    - host: gameServer
      http:
        paths:
          - pathType: Prefix
            path: "/*"
            backend:
              service:
                name: gameServer-depl-service
                port:
                  number: 80
